[package]
name = "async-iterator"
version = "2.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-iterator"
documentation = "https://docs.rs/async-iterator"
description = "An async version of iterator"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
futures = "0.3.27"
futures-core = "0.3.27"
pin-project = "1.0.12"

[dev-dependencies]
